[package]
name = "anttpmon"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "anttpmon"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
anyhow = "1.0"

[build-dependencies]
tonic-build = "0.12"
