[package]
name = "anttpmon"
version = "0.1.4"
edition = "2024"
authors = ["Paul Green"]
description = "AntTP Monitor is like 'top' for AntTP, showing command status"
readme = "README.md"
repository = "https://github.com/traktion/anttp-monitor"
license = "Apache-2.0"
keywords = ["anttp", "top", "monitor", "autonomi", "http"]
categories = ["web-programming", "web-programming::http-server", "command-line-utilities"]
exclude = [".github", ".gitignore", "target/"]

[[bin]]
name = "anttpmon"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
anyhow = "1.0"

[build-dependencies]
tonic-build = "0.12"
